# sctebot2_robot

./: README.md
sctebot2_base/carlikebot_ros2_demo_controller/: CMakeLists.txt  carlikebot_ros2_demo_controller.xml  carlikebot_system.cpp  package.xml
sctebot2_base/carlikebot_ros2_demo_controller/hardware/: carlikebot_system.cpp
sctebot2_base/carlikebot_ros2_demo_controller/hardware/include/carlikebot_ros2_demo_controller/: carlikebot_system.hpp
sctebot2_bringup/: CMakeLists.txt  package.xml
sctebot2_bringup/launch/: carlikebot.launch.py
